tests/fixtures/positive/release-engineering/module-template-conformance/feature/payments/build.gradle.kts
// Aggregate feature module. Required child module `:feature:payments:data`
// and the com.android.library plugin are intentionally missing in this fixture.
plugins {
    id("org.jetbrains.kotlin.android")
}
