tests/fixtures/negative/release-engineering/module-template-conformance/feature/payments/build.gradle.kts
// Aggregate feature module with the expected ui/data/domain child modules.
plugins {
    id("com.android.library")
    id("org.jetbrains.kotlin.android")
}
